# packBase

./: LICENSE  README.md  pyproject.toml  setup.py  templates.py
src/packBase/: cli.py  setup.py  templates.py  utils.py
