[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packBase"
version = "0.0.1"
description = "Template package for creating new python packages"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  {name = "Hanice Sun", email = "hanicesun@gmail.edu"}
]

[project.urls]
"Homepage" = "https://github.com/HaniceSun/packBase"

[project.scripts]
packBase = "packBase.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"
